# heic_converter

./: CMakeLists.txt  README.md
include/: config.h  converter.h  file_utils.h  format_encoder.h  heic_decoder.h  image_processor.h
src/: config.cpp  converter.cpp  file_utils.cpp  format_encoder.cpp  heic_decoder.cpp  image_processor.cpp  main.cpp
test/: test_panorama.cpp
